--- a/src/pages/Suggestion.css
+++ b/src/pages/Suggestion.css
@@ -14,6 +14,11 @@
 }
 
 .write-suggestion form{
-  width: 50%;
-  margin-top: 10px;
+    width: 50%;
+    margin-top: 10px;;
+}
+
+.write-suggestion button {
+    width: 15%;
+    border-radius: 3px;
 }
