--- a/src/pages/Suggestion.css
+++ b/src/pages/Suggestion.css
@@ -1,24 +1,3 @@
-.write-suggestion{
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  align-items: center;
-}
-
-.write-suggestion .title{
-    font-size: 18px;
-    line-height: 4em;
-    color: #fa4b2a;
-    font-weight: 350;
-}
-
-.write-suggestion form{
+.custom-modal {
     width: 50%;
-    margin-top: 10px;;
-}
-
-.write-suggestion button {
-    width: 15%;
-    border-radius: 3px;
 }
