--- a/src/pages/UserInterface.css
+++ b/src/pages/UserInterface.css
@@ -23,3 +23,11 @@
   padding: 0.5em 0.5em 0.1em 0.5em;
   margin-top: 1em;
 }
+
+.user-time {
+  margin-right: 83%;
+}
+.user-delete {
+  font-weight: 0.5em;
+  border: 0;
+}
