--- a/src/pages/UserCreate.css
+++ b/src/pages/UserCreate.css
@@ -34,3 +34,9 @@
   margin-top: 1em;
   width: 76%;
 }
+
+.usercreate .error-reminder{
+  color: red;
+  margin: 1em auto -2em auto;
+  display: none;
+}
