--- a/src/pages/UserInterface.css
+++ b/src/pages/UserInterface.css
@@ -22,12 +22,9 @@
   border-radius: 4px;
   padding: 0.5em 0.5em 0.1em 0.5em;
   margin-top: 1em;
+  display: flex;
+  justify-content: space-between;
 }
-
-.user-time {
-  margin-right: 83%;
-}
-.user-delete {
-  font-weight: 0.5em;
-  border: 0;
+.user .user-publish .publish button{
+  border: none;
 }
