--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ footer{
   display: block;
   box-shadow: 0px -6px 9px 3px #cfcfcf;
 }
-.custom-modal {
-    width: 50%;
+.modal-content form button{
+  margin-right: 1em; 
+  margin-top: 1em;
 }
