--- a/src/pages/UserCreate.css
+++ b/src/pages/UserCreate.css
@@ -6,7 +6,6 @@
   margin-top: 1em;
   align-items: center;
   width: 50%;
-  background-color: #fff;
   padding-top: 1em; 
   padding-bottom: 4em;
   border-radius: 5px;
@@ -24,6 +23,7 @@
 .usercreate .input-group input{
   width: 80%;
   height: 40px;
+  opacity: 0.5;
 }
 .usercreate form button{
   margin: 1.6em auto auto auto;
